--- a/_posts/2020-11-29-201129.md
+++ b/_posts/2020-11-29-201129.md
@@ -2,16 +2,14 @@
 
 Zapraszamy do rozpoczęcia przeżywania Adwentu od wspólnej kolacji przy świecach. Jesteśmy zabiegani, często mijamy się z najbliższymi i nie mamy dla siebie czasu. Kolacja jest dobrą okazją do spotkania się w gronie rodzinnym, porozmawiania. To nie musi być specjalnie ugotowana kolacja z wieloma daniami. Wystarczy zwykła kolacja, ale zjedzona w bardziej odświętnej oprawie.
 
-![Kolacja](/img/201129.jpg)
+![Kolacja](/img/2020-11-29.jpg)
 
 ## Jak przygotować?
 
-Rozłóżcie obrus na stole, zapalcie świece i, co najważniejsze, usiądźcie wspólnie do kolacji. Zachęcamy do zapalenia większej liczby świec i zgaszenia światła, aby stworzyć szczególną atmosferę. Można także w tle puścić cicho jakąś przyjemną muzykę. 
+Rozłóżcie obrus na stole, zapalcie świece i, co najważniejsze, usiądźcie wspólnie do kolacji. Zachęcamy do zapalenia większej liczby świec i zgaszenia światła, aby stworzyć szczególną atmosferę. Można także w tle puścić cicho jakąś przyjemną muzykę.
 
 ## Co potrzeba?
 
 Coś do jedzenia, obrus, świece i czas.
 
 ## Smacznego!
-
-
