--- a/_posts/2020-12-09-201209.md
+++ b/_posts/2020-12-09-201209.md
@@ -4,7 +4,7 @@
 
 Maryja pośpieszyła z wizytą do Elżbiety, chcąc podzielić się z nią dobrą nowiną. Podzieliła się z nią jednak czymś więcej niż sama wiadomość, podzieliła się swoją radości, wiarą i swoją nadzieją. Było to spotkanie radosne i pełne Ducha Świętego, którym została napełniona Elżbieta. Z tego spotkania Elżbieta wyszła ubogacona.
 
-2020-12-09.jpg
+![Zdjęcie](/img/2020-12-09.jpg)
 
 ## Zróbmy coś miłego!
 
