--- a/_posts/2020-12-06-201206.md
+++ b/_posts/2020-12-06-201206.md
@@ -1,9 +1,21 @@
-# Wspólne oglądanie rodzinnych zdjęć
+# Święty Mikołaj to nie czerwony krasnal!
 
-Dzisiejsze zadanie jest niezwykle przyjemne: wspólnie oglądanie rodzinnych zdjęć.
+Czy wiesz kim jest Święty Mikołaj? Dziś najczęściej kojarzy nam się z tym grubiutkim krasnalem, z wielką białą brodą i workiem prezentów.
 
-Znajdźcie w ciągu dnia czas, kiedy nie będziecie się spieszyć. Wyciągnijcie albumy, sięgnijcie w twarde dyski, chmury danych, CD i inne nośniki i razem popatrzcie na zdjęcia. Zobaczcie siebie sprzed kilku, kilkunastu lat. Przypomnijcie sobie te wszystkie historie, jakie towarzyszyły poszczególnym obrazom, to co razem przeżyliście, gdzie byliście…
+Niektórzy mówią, że mieszka w Laponii i lata saniami ciągniętymi przez renifery… Jest to miła postać, szczególnie dla dzieci, ale tak naprawdę, jest to jedynie jeden z wielu naśladowców prawdziwego Świętego Mikołaja.
 
-Zobaczcie wspólną drogę, jaką przeszliście. Popatrzcie na wszystkie zmiany, jakie miały miejsce… To jest miejsce i czas aby dać się dotknąć prawdziwej radości.
+Dziś zadanie dla Rodziców – opowiedzcie dzieciom o prawdziwym Świętym Mikołaju. I o tym, że każdy z nas może się stać Mikołajem dla innych, dając od siebie to, czego inni potrzebują – jedzenie, odzież, zabawki, a czasem po prostu uśmiech i chwilę rozmowy…
 
-2020-12-07.jpg
+A poniżej pomoce naukowe i inspiracje:
+
+{% include video.html id="SQq-3vFS844" %}
+
+{% include video.html id="ZbwZ7QcNi9g" %}
+
+Wariant ratunkowy to krótka animowana bajka o prawdziwym Mikołaju:
+
+{% include video.html id="JDO49MnpnBU" %}
+
+I bonusik:
+
+{% include video.html id="3jBwFvvnN78" %}
