--- a/_posts/2020-12-06-201206.md
+++ b/_posts/2020-12-06-201206.md
@@ -10,6 +10,8 @@ A poniżej pomoce naukowe i inspiracje:
 
 {% include video.html id="SQq-3vFS844" %}
 
+Święty Mikołaj - ten brodacz mieszka w Laponii:
+
 {% include video.html id="ZbwZ7QcNi9g" %}
 
 Wariant ratunkowy to krótka animowana bajka o prawdziwym Mikołaju:
