--- a/_posts/2020-12-11-201211.md
+++ b/_posts/2020-12-11-201211.md
@@ -14,7 +14,7 @@ Pierwszy to [piernik staropolski](https://www.kwestiasmaku.com/przepis/piernik-s
 
 Drugi to sprawdzony [przepis na pierniczki](https://www.kwestiasmaku.com/desery/ciasteczka/pierniczki/przepis.html), który w całości możecie wykonać jednego dnia – od mieszania, po dekorowanie.
 
-## Co przygotować
+## Co potrzebujemy:
 
 - mąka
 - jajka
@@ -23,3 +23,9 @@ Drugi to sprawdzony [przepis na pierniczki](https://www.kwestiasmaku.com/desery/
 - mleko
 - soda
 - przyprawy korzenne
+
+## Co przygotować na jutro?
+
+Na jutro przewidujemy ciekawą aktywność, która wymaga przygotowania. Oto co można już przygotować na dzień jutrzejszy:
+
+*Lampion lub latarka, którą można zapalić i zostawić na pewien czas w różnych warunkach pogodowych. Potrzeby będzie czas po południu lub wieczorem, ciepłe ubranie i chęć do zabawy.*
