--- a/_posts/2020-12-13-201213.md
+++ b/_posts/2020-12-13-201213.md
@@ -6,13 +6,13 @@ Najbardziej spektakularnym elementem tego święta są wieczorne procesje w ciem
 
 Tego dnia w domach przygotowuje się o poranku *lussekatter*, czyli szafranowe bułeczki podawane z kawą oraz *glögg* - tradycyjnym grzanym winem.
 
-I właśnie [przygotowanie tych bułeczek](https://www.mojewypieki.com/przepis/lussekatter) jest naszą propozycją na ten dzień. Wspólny posiłek możecie uprzyjemnić sobie odsłuchaniem [Pieśni św. Łucji](https://www.youtube.com/watch?v=C9f6zxo6X0s), której [tłumaczenie na język polski znajdziecie tutaj](https://docs.google.com/document/d/1Jt1q6FnzlPgYGzmo1Cwgj1FaRAHS2m2rgUxjwbRtPVw).
+{% include video.html id="" %}
 
-2020-12-13.jpg
+![Zdjęcie](/img/2020-12-13.jpg)
 
 A więcej o św. Łucji i historii jej święta znajdziecie z kolei [w tym artykule](https://deon.pl/wiara/sw-lucja-wloska-swieta-patronka-szwedow,313179) i w tym filmie:
 
-https://www.youtube.com/watch?v=IgxZS4mWSrw
+{% include video.html id="IgxZS4mWSrw" %}
 
 ## Co przygotować
 
@@ -25,4 +25,3 @@ https://www.youtube.com/watch?v=IgxZS4mWSrw
 - jajko
 - szafran
 - suszona żurawina
-
