--- a/_posts/2020-12-13-201213.md
+++ b/_posts/2020-12-13-201213.md
@@ -6,7 +6,7 @@ Najbardziej spektakularnym elementem tego święta są wieczorne procesje w ciem
 
 Tego dnia w domach przygotowuje się o poranku *lussekatter*, czyli szafranowe bułeczki podawane z kawą oraz *glögg* - tradycyjnym grzanym winem.
 
-{% include video.html id="" %}
+I właśnie [przygotowanie tych bułeczek](https://www.mojewypieki.com/przepis/lussekatter) jest naszą propozycją na ten dzień. Wspólny posiłek możecie uprzyjemnić sobie odsłuchaniem [Pieśni św. Łucji](https://www.youtube.com/watch?v=C9f6zxo6X0s), której [tłumaczenie na język polski znajdziecie tutaj](https://docs.google.com/document/d/1Jt1q6FnzlPgYGzmo1Cwgj1FaRAHS2m2rgUxjwbRtPVw).
 
 ![Zdjęcie](/img/2020-12-13.jpg)
 
