--- a/_posts/2020-12-13-201213.md
+++ b/_posts/2020-12-13-201213.md
@@ -1,6 +1,6 @@
 # Sankta Lucia
 
-13. grudnia w kalendarzu przypada wspomnienie św. Łucji, które w szczególny sposób jest celebrowane w Szwecji.
+13 grudnia w kalendarzu przypada wspomnienie św. Łucji, które w szczególny sposób jest celebrowane w Szwecji.
 
 Najbardziej spektakularnym elementem tego święta są wieczorne procesje w ciemnych kościołach. Procesję ubranych na biało dziewcząt prowadzi św. Łucja, mająca na głowie wieniec z zapalonymi świecami. Ma on symbolizować zbliżające się przesilenie zimowe, jak i mające nadejść na świat światło rozpraszające ciemności, światło którym jest Chrystus.
 
