--- a/_posts/2020-12-11-201211.md
+++ b/_posts/2020-12-11-201211.md
@@ -24,7 +24,7 @@ Drugi to sprawdzony [przepis na pierniczki](https://www.kwestiasmaku.com/desery/
 - soda
 - przyprawy korzenne
 
-## Co przygotować na jutro?
+## Co na jutro?
 
 Na jutro przewidujemy ciekawą aktywność, która wymaga przygotowania. Oto co można już przygotować na dzień jutrzejszy:
 
