--- a/_posts/2020-12-24-201224.md
+++ b/_posts/2020-12-24-201224.md
@@ -8,7 +8,7 @@ Przypomnijmy zatem naszym dzieciom ten czas i opowiedzmy rodzinną historię. Dz
 
 Podziękujmy dziś wspólnie Bogu za cud narodzin, którego my wszyscy byliśmy kiedyś udziałem.
 
-2020-12-24.jpg
+![Zdjęcie](/img/2020-12-24.jpg)
 
 ## Co przygotować?
 
