--- a/_posts/2020-12-21-201221.md
+++ b/_posts/2020-12-21-201221.md
@@ -8,17 +8,15 @@ Jak zbudować stajenkę? Najprostsza wersja, to szopka z kartonika po butach. Wy
 
 Poniżej, znajdziecie kilka inspiracji – dla mniej i bardziej ambitnych.
 
-Dla ambitnych
+## Dla ambitnych
 
 {% include video.html id="99BCu2zpxKg" %}
 
-Dla nieco mniej ambitnych
+## Dla nieco mniej ambitnych
 
 {% include video.html id="KMRQkkgPYio" %}
 
 [Kolorowanka](http://www.supercoloring.com/pl/kolorowanki/malutki-jezus)
-
-![Zdjęcie](/img/2020-12-21.jpg)
 
 ## Materiały
 
