Updates next days

--- a/_posts/2020-11-30-201130.md
+++ b/_posts/2020-11-30-201130.md
@@ -17,3 +17,7 @@ I zastanówcie się wspólnie, jak my dzisiaj powinniśmy czekać na ponowne prz
 Może zainspiruje Cię krótki film [Szukając Nadziei](https://www.youtube.com/watch?v=-e61nMgZarQ) z Franciszkańskich rekolekcji internetowych:
 
 {% include video.html id="-e61nMgZarQ" %}
+
+## Co na jutro?
+
+Na jutrzejszą aktywność prosimy już o przygotowanie następujących materiałów: słoik,  kolorowa bibuła, sznurek, drucik, świeczka, klej, nożyczki i ołówek.
