--- a/_posts/2020-12-04-201204.md
+++ b/_posts/2020-12-04-201204.md
@@ -31,3 +31,6 @@ Ciekawą opcją do czytania z dziećmi w różnym wieku są książki podróżni
 
 Powodzenia!
 
+## Co na jutro?
+
+Jutrzejsza aktywność będzie wymagała prac ręcznych i dodatkowych materiałów, więc przygotujcie: kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibułę, cekiny, kredki, farby, pędzle, flamastry i klej.
