--- a/_posts/2020-12-09-201209.md
+++ b/_posts/2020-12-09-201209.md
@@ -17,3 +17,7 @@ Zagadajmy do naszych sąsiadów, bądźmy mili do Pani w sklepie, wpuśćmy samo
 Mniejsze czy większe miłe słowa i gesty ucieszą oraz ubogacą zarówno osoby, do których są kierowane, jak i nas samych. 
 
 Powodzenia!
+
+## Co na jutro?
+
+Na jutro trzeba pozbierać stare gazety albo niepotrzebne już wydrukowane kartki do szkoły lub pracy.
