--- a/_posts/2020-12-11-201211.md
+++ b/_posts/2020-12-11-201211.md
@@ -26,6 +26,4 @@ Drugi to sprawdzony [przepis na pierniczki](https://www.kwestiasmaku.com/desery/
 
 ## Co na jutro?
 
-Na jutro przewidujemy ciekawą aktywność, która wymaga przygotowania. Oto co można już przygotować na dzień jutrzejszy:
-
-*Lampion lub latarka, którą można zapalić i zostawić na pewien czas w różnych warunkach pogodowych. Potrzeby będzie czas po południu lub wieczorem, ciepłe ubranie i chęć do zabawy.*
+Na jutro przewidujemy ciekawą aktywność, która wymaga przygotowania. Oto co można już przygotować na dzień jutrzejszy: *Lampion lub latarka, którą można zapalić i zostawić na pewien czas w różnych warunkach pogodowych. Potrzeby będzie czas po południu lub wieczorem, ciepłe ubranie i chęć do zabawy.*
