--- a/_posts/2020-12-12-201212.md
+++ b/_posts/2020-12-12-201212.md
@@ -12,3 +12,6 @@ Zabawę najlepiej rozegrać w ciemnym miejscu np. parku lub lesie. Rodzic-organi
 
 Gasimy w domu wszystkie światła i chwilę siedzimy w ciemności. Rozmawiamy, jak wyglądałoby życie bez światła. Następnie zapalamy małą świeczkę lub lampkę. Patrzymy jak oświetla ona pomieszczenie. Nawet małe światło powoduje, że możemy się poruszać, funkcjonować.
 
+## Co na jutro?
+
+Jutro będziemy gotować, więc upewnijcie się, że macie w kuchni: mleko, drożdże, masło, mąkę, kardamon, cukier, jajko, szafran i suszoną żurawinę.
