--- a/_posts/2020-12-20-201220.md
+++ b/_posts/2020-12-20-201220.md
@@ -6,7 +6,7 @@ Nie biegajcie za prezentami, nie załatwiajcie żadnych spraw. Do kościoła pó
 
 Do południa zostańcie w piżamach!
 
-2020-12-20
+![Zdjęcie](/img/2020-12-20.jpg)
 
 ## Śniadanie…
 
