--- a/_posts/2020-12-19-201219.md
+++ b/_posts/2020-12-19-201219.md
@@ -6,7 +6,7 @@ Zadanie na dziś jest następujące: **zostawiamy wszystkie telefony w domu i wy
 
 Jeżeli jesteście na kwarantannie lub z innego powodu nie możecie opuścić domu proponujemy wyłączyć telefony na godzinę i podróżować palcem po mapie, pooglądać film przyrodniczy, powspominać minione wyjazdy, spacery, wypady, pomarzyć gdzie można by pojechać…
 
-2020-12-19.jpg
+![Zdjęcie](/img/2020-12-19.jpg)
 
 Warto post factum zadać sobie pytanie – czy bardzo mi telefonu brakowało? Może spróbować smartfonowego postu przez kilka dni adwentu, lub ograniczyć w tym czasie używanie niektórych aplikacji.
 
