--- a/_posts/2020-11-29-201129.md
+++ b/_posts/2020-11-29-201129.md
@@ -10,6 +10,10 @@ Rozłóżcie obrus na stole, zapalcie świece i, co najważniejsze, usiądźcie 
 
 ## Co potrzeba?
 
-Coś do jedzenia, obrus, świece i czas.
+Coś do jedzenia, obrus, świece i czas. Smacznego!
 
-## Smacznego!
+## Pierwsza niedziela adwentu!
+
+Dzisiaj jest pierwsza niedziela adwentu, więc zachęcamy do zapalenia pierwszej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-1.jpg)
