--- a/_posts/2020-12-06-201206.md
+++ b/_posts/2020-12-06-201206.md
@@ -21,3 +21,9 @@ Wariant ratunkowy to krótka animowana bajka o prawdziwym Mikołaju:
 I bonusik:
 
 {% include video.html id="3jBwFvvnN78" %}
+
+## Druga niedziela adwentu!
+
+Dzisiaj jest druga niedziela adwentu, więc zachęcamy do zapalenia kolejnej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-2.jpg)
