--- a/_posts/2020-12-13-201213.md
+++ b/_posts/2020-12-13-201213.md
@@ -25,3 +25,9 @@ A więcej o św. Łucji i historii jej święta znajdziecie z kolei [w tym artyk
 - jajko
 - szafran
 - suszona żurawina
+
+## Trzecia niedziela adwentu!
+
+Dzisiaj jest trzecia niedziela adwentu, więc zachęcamy do zapalenia kolejnej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-3.jpg)
