--- a/_posts/2020-12-20-201220.md
+++ b/_posts/2020-12-20-201220.md
@@ -23,3 +23,9 @@ Miłej, spokojnej i bardzo leniwej niedzieli!
 ## Co na jutro?
 
 Po takim leniuchowaniu, jutro będzie czas na kolejną aktywność manualną. Będą potrzebne: kartonik po butach, klej, kredki/flamastry/farby, nożyczki i bibuła.
+
+## Ostatnia niedziela adwentu!
+
+Dzisiaj jest już ostatnia niedziela adwentu, więc zachęcamy do zapalenia ostatniej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-4.jpg)
