--- a/_posts/2020-12-05-201205.md
+++ b/_posts/2020-12-05-201205.md
@@ -2,7 +2,7 @@
 
 Dzisiejsze zadanie, to wykonanie kartek świątecznych dla najbliższych, rodziny, przyjaciół, znajomych.
 
-Takie kartki wypełnione serdecznymi życzeniami, można oczywiście tradycyjnie wysłać pocztą lub po prostu wręczyć podczas świąt. Wykonana własnoręcznie kartka z odręcznie wypisanymi życzeniami, to dziś, w świecie smsów i różnych social mediów, prawdziwy rarytas.
+Takie kartki wypełnione serdecznymi życzeniami, można oczywiście tradycyjnie wysłać pocztą lub po prostu wręczyć podczas świąt. Wykonana własnoręcznie kartka z odręcznie wypisanymi życzeniami, to dziś, w świecie smsów i różnych mediów społecznościowych, prawdziwy rarytas.
 
 ![Zdjęcie](/img/2020-12-05.jpg)
 
