--- a/_posts/2020-12-03-201203.md
+++ b/_posts/2020-12-03-201203.md
@@ -2,7 +2,7 @@
 
 Adwent to czas wielu akcji charytatywnych, takich jak choćby świąteczne paczki – tutki do przygotowania których zachęca Caritas, czy akcja - Szlachetna Paczka. Warto więc wykorzystać ten czas na wspólne, rodzinne czynienie dobra, podzielenie się swoim dobrem z innymi.
 
-Dziś proponujemy wykonanie rodzinnej paczki żywnościowej dla ubogich. Taką paczkę można przekazać do Caritasu, noclegowni dla bezdomnych, załadować społeczną lodówkę (w Gdyni taka lodówka jest na Wzgórzu Maksymiliana przy klasztorze franciszkańskim), czy też zawieźć day komuś ubogiemu, kogo znamy.
+Dziś proponujemy wykonanie rodzinnej paczki żywnościowej dla ubogich. Taką paczkę można przekazać do Caritasu, noclegowni dla bezdomnych, załadować społeczną lodówkę (w Gdyni taka lodówka jest na Wzgórzu Maksymiliana przy klasztorze franciszkańskim), czy też zawieźć komuś ubogiemu, kogo znamy.
 
 Warto w tworzenie paczki zaangażować dzieci. Zapytać, co one by do takiej paczki włożyły i dlaczego, a może pociągnąć temat dalej i porozmawiać o ubóstwie w świecie i naszej chrześcijańskiej odpowiedzi na nie.
 
