--- a/_posts/2020-12-07-201207.md
+++ b/_posts/2020-12-07-201207.md
@@ -1,6 +1,6 @@
-# Wspólne oglądanie rodzinnych zdjęć
+# Wspólne oglądanie zdjęć rodzinnych
 
-Dzisiejsze zadanie jest niezwykle przyjemne: wspólnie oglądanie rodzinnych zdjęć.
+Dzisiejsze zadanie jest niezwykle przyjemne: rodzinne oglądanie zdjęć.
 
 Znajdźcie w ciągu dnia czas, kiedy nie będziecie się spieszyć. Wyciągnijcie albumy, sięgnijcie w twarde dyski, chmury danych, CD i inne nośniki i razem popatrzcie na zdjęcia. Zobaczcie siebie sprzed kilku, kilkunastu lat. Przypomnijcie sobie te wszystkie historie, jakie towarzyszyły poszczególnym obrazom, to co razem przeżyliście, gdzie byliście…
 
