--- a/_posts/2020-12-11-201211.md
+++ b/_posts/2020-12-11-201211.md
@@ -1,4 +1,4 @@
-# Upieczcie razem pierniczki
+# Pieczemy razem pierniczki
 
 Rodzinne przygotowywanie świątecznych wypieków to świetna metoda na wspólne, wieczorne spędzanie czasu. W zależności od wieku dziecka, możesz powierzyć mu różne obowiązki – od dosypywania składników do masy, przez wałkowanie i wygniatanie wzorów, aż po dekorowanie kremami, lukrami i posypkami.
 
