--- a/_posts/2020-12-17-201217.md
+++ b/_posts/2020-12-17-201217.md
@@ -2,7 +2,7 @@
 
 Dzisiaj zachęcamy Was do zrobienia sobie pamiątkowego zdjęcia rodzinnego. A może nie tylko zdjęcia, ale w ogóle całej sesji zdjęć rodzinnych?
 
-![Zdjęcie](/img/ ![Zdjęcie](/img/foto.jpg))
+![Zdjęcie](/img/foto.jpg)
 
 ## Wskazówki do robienia zjdęcia rodzinnego
 
