--- a/_posts/2020-12-25-201225.md
+++ b/_posts/2020-12-25-201225.md
@@ -6,4 +6,4 @@ Mamy nadzieję, że dzięki tej inicjatywie i tej interaktywnej stronce przeżyl
 
 I zachęcamy do śpiewania kolęd w gronie rodzinnym!
 
-{% include video.html id="ZQeMAgFYHuo" %}
+{% include video.html id="nTcq5gsjZVw" %}
