--- a/_posts/2020-12-09-201209.md
+++ b/_posts/2020-12-09-201209.md
@@ -2,7 +2,9 @@
 
 > W tym czasie Maryja wybrała się i poszła z pośpiechem w góry do pewnego miasta w pokoleniu Judy. Weszła do domu Zachariasza i pozdrowiła Elżbietę. Gdy Elżbieta usłyszała pozdrowienie Maryi, poruszyło się dzieciątko w jej łonie, a Duch Święty napełnił Elżbietę (Łk 1, 39-41).
 
-Maryja pośpieszyła z wizytą do Elżbiety, chcąc podzielić się z nią dobrą nowiną. Podzieliła się z nią jednak czymś więcej niż sama wiadomość, podzieliła się swoją radości, wiarą i swoją nadzieją. Było to spotkanie radosne i pełne Ducha Świętego, którym została napełniona Elżbieta. Z tego spotkania Elżbieta wyszła ubogacona.
+Maryja pośpieszyła z wizytą do Elżbiety, chcąc podzielić się z nią dobrą nowiną.
+
+Podzieliła się z nią jednak czymś więcej niż samą wiadomością, podzieliła się swoją radością, wiarą i  nadzieją. Było to spotkanie radosne i pełne Ducha Świętego, którym została napełniona Elżbieta. Z tego spotkania Elżbieta wyszła ubogacona.
 
 ## Zróbmy coś miłego!
 
