--- a/_posts/2021-12-03-211203.md
+++ b/_posts/2021-12-03-211203.md
@@ -12,6 +12,6 @@ Odłóżcie zatem wieczorem wszelkie sprzęty elektroniczne i zagrajcie wspólni
 
 ## Nie ma planszówki? Nie ma sprawy!
 
-A jeśli nie macie żadnej planszówki pod ręką, to nic straconego - zapytajcie znajomych, zajrzyjcie do lokalnej biblioteki lub zagrajcie na kartce - w statki, w piłkarzyki czy państwa i miasta. Ciekawe pomysły na gry na kartce znajdziecie w [tym artykule](https://zabawnik.org/wystarczy-kartka-i-dlugopis).
+A jeśli nie macie żadnej planszówki pod ręką, to nic straconego - zapytajcie znajomych, zajrzyjcie do lokalnej biblioteki lub zagrajcie na kartce - w statki, w piłkarzyki czy państwa i miasta. Ciekawe pomysły na gry na kartce znajdziecie w [tym artykule](https://zabawnik.org/wystarczy-kartka-i-dlugopis){:target='_blank'}.
 
 Dobrej zabawy!
