--- a/_posts/2021-12-05-211205.md
+++ b/_posts/2021-12-05-211205.md
@@ -2,7 +2,7 @@
 
 ## Kiedy po raz ostatni zrobiliście coś całą rodziną po raz pierwszy?
 
-W swojej książce [“Sztuka tworzenia wspomnień”](https://www.ojcowskastronamocy.pl/069) Meik Wiking podaje 8 sposobów świadomego tworzenia szczęśliwych wspomnień. Jednym z nich jest efekt nowości, dzięki któremu lepiej zapamiętujemy te momenty, gdy zrobiliśmy coś po raz pierwszy.
+W swojej książce [“Sztuka tworzenia wspomnień”](https://www.ojcowskastronamocy.pl/069){:target='_blank'} Meik Wiking podaje 8 sposobów świadomego tworzenia szczęśliwych wspomnień. Jednym z nich jest efekt nowości, dzięki któremu lepiej zapamiętujemy te momenty, gdy zrobiliśmy coś po raz pierwszy.
 
 ![Wycieczka](/img/2021-12-05.jpg)
 
