--- a/_posts/2021-11-28-211128.md
+++ b/_posts/2021-11-28-211128.md
@@ -21,3 +21,5 @@ Smacznego!
 Dzisiaj jest pierwsza niedziela adwentu, więc zachęcamy do zapalenia pierwszej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
 
 ![Wieniec](/img/adwent-1.jpg)
+
+## Zaczynasz z nami Adwent Rodzinny? Daj nam znać w komentarzach!
