--- a/_posts/2021-11-29-211129.md
+++ b/_posts/2021-11-29-211129.md
@@ -25,4 +25,4 @@ Zachęcamy Was do słuchania, a także do wspólnego rodzinnego śpiewania tych 
 ## Co przygotować
 
 - Komputer, smartfon lub tablet.
-- Głośnik na Bluetooth.
+- Zalecamy głośnik na Bluetooth.
