--- a/_posts/2021-11-30-211130.md
+++ b/_posts/2021-11-30-211130.md
@@ -16,3 +16,4 @@ Powodzenia!
 
 Produkty spożywcze o długim terminie przydatności do spożycia (np. mąka, cukier, makaron, olej, konserwy, czekolady itp.)
 
+## Dajcie znać jak ta akcja się wam udała w komentarzach!
