--- a/_posts/2021-12-01-211201.md
+++ b/_posts/2021-12-01-211201.md
@@ -23,4 +23,4 @@ Co jest potrzebne? Czas, wygodne ubrania i książki w wersji tradycyjnej, elekt
 
 Ciekawą opcją do czytania z dziećmi w różnym wieku są książki podróżnicze np. z serii [“Nela mała reporterka”](https://pl.wikipedia.org/wiki/Nela_mała_reporterka#Książki)
 
-Powodzenia!
+## Co przeczytaliście? Dajcie znać w komentarzach!
