--- a/_posts/2021-12-04-211204.md
+++ b/_posts/2021-12-04-211204.md
@@ -23,3 +23,5 @@ Poniżej zamieściliśmy filmiki z wieloma kartkowymi inspiracjami, mogą się p
 ## Materiały
 
 Kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibuła, cekiny, kredki, farby, pędzle, flamastry, klej.
+
+## Ile i jakie kartki przygotowaliście? Dajcie znać w komentarzach!
