--- a/_posts/2021-12-05-211205.md
+++ b/_posts/2021-12-05-211205.md
@@ -22,3 +22,4 @@ Dzięki temu, uda Wam się stworzyć wspólne szczęśliwe wspomnienie, które b
 
 Ubrania dostosowane do pogody, dobry humor i przekąski do podładowania energii w jesienny dzień.
 
+## Dokąd poszliście? Podzielcie się z innymi w komentarzach!
