--- a/_posts/2021-12-06-211206.md
+++ b/_posts/2021-12-06-211206.md
@@ -15,6 +15,6 @@ Dziś mamy mikołajowe zadania i to pod presją czasu! Przygotujcie kartkę papi
 7. Ułóżcie i wykonajcie okrzyk na cześć Świętego Mikołaja!
 8. I ostatnia prosta – wielki przytulas dla wszystkich, którzy są dookoła!
 
-I jak wam poszło? Jak wyniki w punkcie szóstym? Wrażeniami można się podzielić na czacie. 
-
 ![Zdjęcie](/img/2021-12-06.png)
+
+## I jak wam poszło? Jak wyniki w punkcie szóstym? Wrażeniami podzielcie się w komentarzach!
