--- a/_posts/2021-12-09-211209.md
+++ b/_posts/2021-12-09-211209.md
@@ -19,3 +19,4 @@ Gwarantujemy moc wrażeń i zużycie wszystkich zapasów niewykorzystanej energi
 
 Gazety, kartki, ewentualnie skarpetki lub poduszki.
 
+## I jak się udała zabawa? Dajcie znać w komentarzach!
