--- a/_posts/2021-12-03-211203.md
+++ b/_posts/2021-12-03-211203.md
@@ -14,4 +14,9 @@ Odłóżcie zatem wieczorem wszelkie sprzęty elektroniczne i zagrajcie wspólni
 
 A jeśli nie macie żadnej planszówki pod ręką, to nic straconego - zapytajcie znajomych, zajrzyjcie do lokalnej biblioteki lub zagrajcie na kartce - w statki, w piłkarzyki czy państwa i miasta. Ciekawe pomysły na gry na kartce znajdziecie w [tym artykule](https://zabawnik.org/wystarczy-kartka-i-dlugopis){:target='_blank'}.
 
-Dobrej zabawy!
+## P.S. Co przygotować na jutro?
+
+Na jutro przygotujcie kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibułę, cekiny, kredki, farby, pędzle, flamastry i klej.
+
+## Jaką planszówkę lub grę wybraliście? Dajcie znać w komentarzach!
+
