--- a/_posts/2021-12-10-211210.md
+++ b/_posts/2021-12-10-211210.md
@@ -7,7 +7,7 @@ Znajdźcie w ciągu dnia czas, kiedy nie będziecie się spieszyć. Wyciągnijci
 
 Zobaczcie wspólną drogę, jaką przeszliście. Popatrzcie na wszystkie zmiany, jakie miały miejsce… To jest miejsce i czas aby dać się dotknąć prawdziwej radości.
 
-![Zdjęcie](/img/![Zdjęcie](/img/2020-12-07.jpg))
+![Zdjęcie](/img/2020-12-07.jpg)
 
 ## Wybierzcie najlepsze zdjęcia z ostatnich dwóch lat
 
