--- a/_posts/2021-12-11-211211.md
+++ b/_posts/2021-12-11-211211.md
@@ -12,7 +12,7 @@ I właśnie [przygotowanie tych bułeczek](https://www.mojewypieki.com/przepis/l
 
 A więcej o św. Łucji i historii jej święta znajdziecie z kolei [w tym artykule](https://deon.pl/wiara/sw-lucja-wloska-swieta-patronka-szwedow,313179) i [w tym filmie](https://www.youtube.com/watch?v=IgxZS4mWSrw).
 
-![Zdjęcie](/img/2021-12-11-1.jpg)
+![Zdjęcie](/img/2021-12-11.jpg)
 
 Co przygotować
 Mleko, drożdże, masło, mąka, kardamon, cukier, jajko, szafran, suszona żurawina.
