--- a/_posts/2021-12-02-211202.md
+++ b/_posts/2021-12-02-211202.md
@@ -5,4 +5,6 @@ Dziś nie ma zadania, jest za to złota myśl, niech Wam towarzyszy cały dzień
 > "Grzeszy człowiek, który chce otrzymać od swego bliźniego więcej, niż jest gotów dać sam z siebie Bogu."\\
 > św. Franciszek z Asyżu
 
+Dziś zapraszamy każdego z członków rodziny do refleksji nad naszym dawaniem i naszymi oczekiwaniami. A może po własnych przemyśleniach uda się rodzinnie porozmawiać?
+
 ![Cytat](/img/2021-12-02.jpg)
