--- a/_posts/2021-12-07-211207.md
+++ b/_posts/2021-12-07-211207.md
@@ -5,4 +5,6 @@ Dziś nie ma zadania, jest za to złota myśl, niech Wam towarzyszy cały dzień
 > "Bóg nikomu miłosierdzia swego nie odmówi. Niebo i ziemia może się odmienić, ale nie wyczerpie się miłosierdzie Boże."\\
 > św. Faustyna Kowalska
 
+Bóg jest dobry, Bóg nikogo nie odrzuca, nie przekreśla. Bóg walczy o człowieka i na niego czeka do ostatniej chwili, ostatniego tchnienia. Dziś zapraszamy do refleksji nad miłosierdziem.
+
 ![Zdjęcie](/img/2021-12-07.jpg)
