--- a/_posts/2021-12-05-211205.md
+++ b/_posts/2021-12-05-211205.md
@@ -22,4 +22,10 @@ Dzięki temu, uda Wam się stworzyć wspólne szczęśliwe wspomnienie, które b
 
 Ubrania dostosowane do pogody, dobry humor i przekąski do podładowania energii w jesienny dzień.
 
+## Druga niedziela adwentu!
+
+Dzisiaj jest druga niedziela adwentu, więc zachęcamy do zapalenia kolejnej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-2.jpg)
+
 ## Dokąd poszliście? Podzielcie się z innymi w komentarzach!
