--- a/_posts/2021-12-12-211212.md
+++ b/_posts/2021-12-12-211212.md
@@ -18,3 +18,9 @@ Gasimy w domu wszystkie światła i chwilę siedzimy w ciemności. Rozmawiamy, j
 ## Co przygotować:
 
 Lampion lub latarka, którą można zapalić i zostawić na pewien czas w różnych warunkach pogodowych. Potrzeby będzie czas po południu lub wieczorem, ciepłe ubranie i chęć do zabawy.
+
+## Trzecia niedziela adwentu!
+
+Dzisiaj jest trzecia niedziela adwentu, więc zachęcamy do zapalenia kolejnej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-3.jpg)
