--- a/_posts/2021-12-21-211221.md
+++ b/_posts/2021-12-21-211221.md
@@ -1,16 +1,20 @@
 
 # Udekorowanie domu
 
-Tak, nadszedł ten dzień! Już tylko trzy dni do Wigilii. Dzisiaj zapraszamy do dekorowania domu/pokoju. Czas adwentowy i bożonarodzeniowy to czas radosny. Nasza radość i oczekiwanie może się wyrażać w specjalnym wystroju naszego domu lub pokoju.
+Tak, nadszedł ten dzień! Już tylko dwa dni do Wigilii. Dzisiaj zapraszamy do dekorowania domu/pokoju. Czas adwentowy i bożonarodzeniowy to czas radosny. Nasza radość i oczekiwanie może się wyrażać w specjalnym wystroju naszego domu lub pokoju.
 
 Zaczynamy oczywiście od posprzątania naszego domu/pokoju. Pamiętajmy jednak, że porządek i czystość, choć ważne, nie są najważniejsze. Nie sprowadzajmy świątecznych przygotowań do sprzątania, odkurzania, mycia i szorowania!
 
 Zapraszamy do rozwieszenia lampek, zawieszenia łańcuchów, ustawienia szopki bożonarodzeniowej i różnych ozdób świątecznych. Można także rozłożyć szczególny obrus na stole.
 
+![Zdjęcie](/img/2020-12-22.jpg)
+
 Jeśli szukasz inspiracji oto parę propozycji:
 
-Jak ozdobić dom na święta
-Ozdabiamy dom na święta
-10 najmodniejszych dekoracji
-Jak zrobić ozdoby szybko i tanio
+- [Jak ozdobić dom na święta](https://www.garneczki.pl/blog/jak-ozdobic-dom-na-swieta/){:target='_blank'} 
+- [Ozdabiamy dom na święta](https://muratordom.pl/wnetrza/dekoracje/najpiekniejsze-dekoracje-swiateczne-ozdabiamy-dom-na-swieta-aa-rHH6-oRPV-Jh9o.html){:target='_blank'} 
+- [10 najmodniejszych dekoracji](https://ladnydom.pl/budowa/56,167217,19305326,dekoracje-domu-na-swieta-bozego-narodzenia-w-10-najmodniejszych.html){:target='_blank'} 
+- [Jak zrobić ozdoby szybko i tanio](https://ladnydom.pl/budowa/56,167217,17168234,ozdoby-swiateczne-na-ostatnia-chwile-szybko-i-tanio-zrob.html){:target='_blank'} 
+
+Powodzenia!
 
