--- a/_posts/2021-12-21-211221.md
+++ b/_posts/2021-12-21-211221.md
@@ -1,7 +1,7 @@
 
 # Udekorowanie domu
 
-Tak, nadszedł ten dzień! Już tylko dwa dni do Wigilii. Dzisiaj zapraszamy do dekorowania domu/pokoju. Czas adwentowy i bożonarodzeniowy to czas radosny. Nasza radość i oczekiwanie może się wyrażać w specjalnym wystroju naszego domu lub pokoju.
+Tak, nadszedł ten dzień! Już tylko trzy dni do Wigilii. Dzisiaj zapraszamy do dekorowania domu/pokoju. Czas adwentowy i bożonarodzeniowy to czas radosny. Nasza radość i oczekiwanie może się wyrażać w specjalnym wystroju naszego domu lub pokoju.
 
 Zaczynamy oczywiście od posprzątania naszego domu/pokoju. Pamiętajmy jednak, że porządek i czystość, choć ważne, nie są najważniejsze. Nie sprowadzajmy świątecznych przygotowań do sprzątania, odkurzania, mycia i szorowania!
 
