--- a/_posts/2021-12-19-211219.md
+++ b/_posts/2021-12-19-211219.md
@@ -1,17 +1,31 @@
-# Robimy Gwiazdę Betlejemską
+# Bardzo leniwy niedzielny poranek w piżamach
 
-Jednym z najważniejszych symboli adwentowych jest Gwiazda Betlejemska. To ona przecież wskazywała drogę do Betlejem.
+Przed nami ostatnia niedziela przed Świętami Bożego Narodzenia. Proponujemy tą niedzielę uczcić błogim lenistwem.
 
-Dlatego dziś zachęcamy Was do wykonanie jej własnoręcznie, by i w Waszym domu pojawił się znak, że jesteśmy coraz bliżej celu.
+Nie biegajcie za prezentami, nie załatwiajcie żadnych spraw. Do kościoła pójdźcie może trochę później niż zwykle.
 
-Możecie zrobić kilka mniejszych i ozdobić nimi choinkę lub powiesić w różnych miejscach, ale możecie też zdecydować się na Dużą Gwiazdę, która zawiśnie na czubku Waszej choinki lub innym widocznym miejscu.
- 
-![Zdjęcie](/img/2021-12-20.jpg)
+Do południa zostańcie w piżamach!
 
-## Instrukcja filmowa
+![Zdjęcie](/img/2020-12-20.jpg)
 
-{% include video.html id="NmgMe2tNVyo" %}
+## Śniadanie…
 
-## Co przygotować?
+Zróbcie na śniadanie gofry lub grzanki. Lub popcorn. A co tam! Albo jajecznicę dla wszystkich domowników.
 
-2 kartki A4 (lub większe) - wybierzcie kolor w jakim ma być gwiazda.
+Przygotujcie kawę i herbatę i spotkajcie się w sypialni rodziców wraz z dzieciakami. Czas na śniadanie w łóżku.
+
+## …w łóżku?
+
+Zróbcie wspólne pogaduchy. O najfajniejszych wspomnieniach z poprzednich świąt. O reszcie rodziny, której w tym roku ze względu na pandemię nie będziemy mogli gościć na wigilii. O tym jak nam mija ten Adwent. O planach i marzeniach na kolejny, miejmy nadzieję mniej zawirusowany, rok!
+
+Miłej, spokojnej i bardzo leniwej niedzieli!
+
+## Co na jutro?
+
+Po takim leniuchowaniu, jutro będzie czas na kolejną aktywność manualną. Będą potrzebne: kartonik po butach, klej, kredki/flamastry/farby, nożyczki i bibuła.
+
+## Ostatnia niedziela adwentu!
+
+Dzisiaj jest już ostatnia niedziela adwentu, więc zachęcamy do zapalenia ostatniej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
+
+![Wieniec](/img/adwent-4.jpg)
