--- a/_posts/2021-12-19-211219.md
+++ b/_posts/2021-12-19-211219.md
@@ -1,8 +1,6 @@
 # Bardzo leniwy niedzielny poranek w piżamach
 
-Przed nami ostatnia niedziela przed Świętami Bożego Narodzenia. Proponujemy tą niedzielę uczcić błogim lenistwem.
-
-Nie biegajcie za prezentami, nie załatwiajcie żadnych spraw. Do kościoła pójdźcie może trochę później niż zwykle.
+Przed nami ostatnia niedziela przed Świętami Bożego Narodzenia. Proponujemy tą niedzielę uczcić błogim lenistwem. Nie biegajcie za prezentami, nie załatwiajcie żadnych spraw. Do kościoła pójdźcie może trochę później niż zwykle.
 
 Do południa zostańcie w piżamach!
 
