more fixes to deploy

--- a/_posts/2021-12-19-211219.md
+++ b/_posts/2021-12-19-211219.md
@@ -4,7 +4,7 @@ Przed nami ostatnia niedziela przed Świętami Bożego Narodzenia. Proponujemy t
 
 Do południa zostańcie w piżamach!
 
-![Zdjęcie](/img/2020-12-20.jpg)
+![Poranek](/img/2020-12-20.jpg)
 
 ## Śniadanie…
 
