--- a/_posts/2021-12-20-211220.md
+++ b/_posts/2021-12-20-211220.md
@@ -6,7 +6,7 @@ Dlatego dziś zachęcamy Was do wykonanie jej własnoręcznie, by i w Waszym dom
 
 Możecie zrobić kilka mniejszych i ozdobić nimi choinkę lub powiesić w różnych miejscach, ale możecie też zdecydować się na Dużą Gwiazdę, która zawiśnie na czubku Waszej choinki lub innym widocznym miejscu.
  
-![Zdjęcie](/img/![Gwiazda](/img/2021-12-20.jpg))
+![Gwiazda](/img/2021-12-20.jpg)
 
 ## Instrukcja filmowa
 
