--- a/_posts/2022-12-01-221201.md
+++ b/_posts/2022-12-01-221201.md
@@ -1,4 +1,4 @@
-# Zrób coś dla innych – uśmiechnij się 😀
+# Zrób coś miłego: uśmiechnij się do innych 😀
 
 Czasami nie trzeba robić wiele, aby sprawić by ktoś inny poczuł się lepiej. Czasami od naszego jednego gestu zależy dzień innej osoby. Jeśli mamy taką siłę,  dlaczego jej nie wykorzystać?
 
