--- a/_posts/2022-11-30-221130.md
+++ b/_posts/2022-11-30-221130.md
@@ -42,7 +42,7 @@ Można też zakupić gotową w sklepie z artykułami plastycznymi. W wykonaniu f
 
 Potrzebne do wykonania masy porcelanowej:
 
-- 300 g kleju wokół
+- 300 g kleju wikol
 - 300 g mąki ziemniaczanej
 - 2 łyżki oliwki,
 - 2 łyżki soku z cytryny.
