--- a/_posts/2022-12-01-221201.md
+++ b/_posts/2022-12-01-221201.md
@@ -2,6 +2,8 @@
 
 Czasami nie trzeba robić wiele, aby sprawić by ktoś inny poczuł się lepiej. Czasami od naszego jednego gestu zależy dzień innej osoby. Jeśli mamy taką siłę,  dlaczego jej nie wykorzystać?
 
+![Uśmiech](/img/2022-12-01.jpg)
+
 ## Co zrobić? Uśmiechnij się do 5 osób!
 
 Uśmiechnij się dziś do 5 spotkanych  osób na ulicy, w środku komunikacji lub budynku. Najlepiej, aby były to osoby Tobie nieznane, które nie spodziewają się uśmiechu z Twojej strony. Zobacz co się wydarzy 😀
