--- a/_posts/2022-12-17-221217.md
+++ b/_posts/2022-12-17-221217.md
@@ -12,4 +12,4 @@ Robienie pierniczków świątecznych potrafi działać magię wprowadzając nas 
 
 Tylko jest jedno ALE niezależnie jaki będzie bałagan nie narzekamy, tylko cieszymy się że wspólnie spędzonego czasu 😁
 
-### [Oto przepis, który powinien zapewnić wam piernikowy sukces.](https://mojewypieki.com/przepis/pierniczki-przepis-i)
+### [Oto przepis, który powinien zapewnić wam piernikowy sukces.](https://mojewypieki.com/przepis/pierniczki-przepis-i){:target='_blank'}
