--- a/_posts/2022-12-09-221209.md
+++ b/_posts/2022-12-09-221209.md
@@ -12,4 +12,8 @@ Zobaczcie wspólną drogę, jaką przeszliście. Popatrzcie na wszystkie zmiany,
 
 Zobaczcie najnowsze zdjęcia. Często możemy mieć wrażenie, że w ostatnim czasie nic się takiego fajnego nie wydarzyło. Jednak  dzięki zdjęciom możemy odkryć te momenty, o których już zapomnieliśmy.
 
+## Zamówcie kalendarz na nowy rok z 12 najlepszych zdjęć
+
 Szczególnie polecamy wspólnie wybrać 12 najlepszych zdjęć z ostatniego czasu. Wtedy można zamówić u fotografa lub online kalendarz ścienny na przyszły rok z tymi zdjęciami, po jednym na każdy miesiąc. To jest dopiero pamiątka!
+
+Poprzez Allegro można znaleźć firmy, które takie kalendarze robią praktycznie z dnia na dzień w super jakości!
