--- a/_posts/2022-12-13-221213.md
+++ b/_posts/2022-12-13-221213.md
@@ -4,16 +4,24 @@ Tradycyjnie 13. grudnia w kalendarzu przypada wspomnienie św. Łucji, które w 
 
 Najbardziej spektakularnym elementem tego święta są wieczorne procesje w ciemnych kościołach. Procesję ubranych na biało dziewcząt prowadzi św. Łucja, mająca na głowie wieniec z zapalonymi świecami. Ma on symbolizować zbliżające się przesilenie zimowe, jak i mające nadejść na świat światło rozpraszające ciemności, światło którym jest Chrystus.
 
+![Zdjęcie](/img/2021-12-11.jpg)
+
 ## Szafranowe bułeczki
 
 Tego dnia w domach przygotowuje się o poranku lussekatter, czyli szafranowe bułeczki podawane z kawą oraz glögg - tradycyjnym grzanym winem.
 
-I właśnie [przygotowanie tych bułeczek](https://www.mojewypieki.com/przepis/lussekatter) jest naszą propozycją na ten dzień. Wspólny posiłek możecie uprzyjemnić sobie odsłuchaniem [Pieśni św. Łucji](https://www.youtube.com/watch?v=C9f6zxo6X0s), której [tłumaczenie na język polski znajdziecie tutaj](https://docs.google.com/document/d/1SR0r7KXyB__0CRneaa5BLuLpi5lEK2lRIWuSUCLKTf4).
+I właśnie [przygotowanie tych bułeczek](https://www.mojewypieki.com/przepis/lussekatter) jest naszą propozycją na ten dzień.
 
-A więcej o św. Łucji i historii jej święta znajdziecie z kolei [w tym artykule](https://deon.pl/wiara/sw-lucja-wloska-swieta-patronka-szwedow,313179) i [w tym filmie](https://www.youtube.com/watch?v=IgxZS4mWSrw).
-
-![Zdjęcie](/img/2021-12-11.jpg)
+Wspólny posiłek możecie uprzyjemnić sobie odsłuchaniem [Pieśni św. Łucji](https://www.youtube.com/watch?v=C9f6zxo6X0s), której [tłumaczenie na język polski znajdziecie tutaj](https://docs.google.com/document/d/1SR0r7KXyB__0CRneaa5BLuLpi5lEK2lRIWuSUCLKTf4).
 
 ## Co przygotować
 
 Mleko, drożdże, masło, mąka, kardamon, cukier, jajko, szafran, suszona żurawina.
+
+## Historia Św. Łucji
+
+A więcej o św. Łucji i historii jej święta znajdziecie z kolei [w tym artykule](https://deon.pl/wiara/sw-lucja-wloska-swieta-patronka-szwedow,313179) i [w tym filmie](https://www.youtube.com/watch?v=IgxZS4mWSrw):
+
+{% include video.html id="IgxZS4mWSrw" %}
+
+Miłego celebrowania!
