--- a/_posts/2022-12-14-221214.md
+++ b/_posts/2022-12-14-221214.md
@@ -4,6 +4,7 @@ Ilość codziennych zadań potrafi nie mieć końca, a nasze zasoby są ogranicz
 
 Jak często myślisz o swoich potrzebach? Czym są potrzeby? Co sprawia, że czujesz się lepiej?
 
+![Misiu się wygrzewa](/img/2022-12-14.jpg)
 
 ## Czas na Ciebie!
 
@@ -11,7 +12,7 @@ Od tego jak czujemy się sami z sobą, zależy, ile z siebie będziemy mogli ofi
 
 Możemy myśleć o tych podstawowych jak odpoczynek, pożywienie, woda, schronienie, ale przecież jako ludzie potrzeb mamy zdecydowanie więcej. Jak często myślimy o swoich potrzebach takich jak potrzeba zaufania, rozwoju, bliskości?
 
-[Lista potrzeba może być naprawdę długa.](https://nvclab.pl/wp-content/uploads/2017/01/lista-potrzeb.pdf)
+[Lista potrzeb może być naprawdę długa](https://nvclab.pl/wp-content/uploads/2017/01/lista-potrzeb.pdf).
 
 
 ## A jakie są  potrzeby innych członków Twojej rodziny?
