--- a/_posts/2022-12-22-221222.md
+++ b/_posts/2022-12-22-221222.md
@@ -1,8 +1,10 @@
-## Zrób coś miłego: cała rodzina przygotowuje Święta Bożego Narodzenia
+## Cała rodzina przygotowuje Święta Bożego Narodzenia 🎄
 
 Dwa dni temu razem dekorowaliśmy dom, a dzisiaj razem przygotowujemy pozostałe rzeczy przedświąteczne.
 
 Mamy jeszcze dwa dni do Wigilii Świąt Bożego Narodzenia. Nie ma stresu. Spokojnie można pewne rzeczy przygotować!
+
+![Wspólne gotowanie](/img/2022-12-22.jpg)
 
 ## Wspólne gotowanie?
 
