--- a/_posts/2022-12-05-221205.md
+++ b/_posts/2022-12-05-221205.md
@@ -1,3 +1,21 @@
 # Zrób coś miłego: powiedz komuś komplement 😘
 
-Tutaj Daria napisze o komplementach :-)
+Jako ludzie jesteśmy istotami społecznymi - lubimy słyszeć miłe słowa.
+
+![Zdjęcie](/img/2022-12-05.jpg)
+
+## Zadanie na dziś: Powiedz jednej osobie kilka miłych słów.  
+
+Mogą to być wyrazy uznania, sympatii, a może pochwała?
+
+Warunkiem, aby te słowa  sprawiły radość jest ich szczerość i trafność. Aby to osiągnąć, należy zastanowić się jaka jest osoba, do której chcemy mówić, co jest dla niej ważne.  
+
+Wszystko, co robimy, aby było wystarczajaco dobre wymaga czasu i doświadczenia. Nie ograniczajcie się w mówieniu miłych słów. 
+
+Róbcie to w domu, pracy, szkole i przedszkolu. 
+
+## Przez komplement wyrażamy miłość do bliźniego!
+
+Przez słowa możemy wyrazić miłość i wcale nie chodzi tu o zdaniu: “Kocham Cię”.
+
+Jeśli macie chwilę, [przeczytajcie o 5 językach miłości](https://mamadu.pl/126765,5-jezykow-milosci-w-ktorych-powinienes-mowic-do-dziecka-uzywasz-ich).
