--- a/_posts/2022-12-17-221217.md
+++ b/_posts/2022-12-17-221217.md
@@ -10,6 +10,8 @@ Przyprawy korzenne, miód, zagniatanie, dekorowanie, a to wszystko wykonywane ws
 
 Robienie pierniczków świątecznych potrafi działać magię wprowadzając nas w tą niepowtarzalna atmosferę rodzinnej bliskości. Zadanie to jest bardziej czasochłonne, ale warto je podjąć, bo daje ogromną satysfakcję.
 
-Tylko jest jedno ALE niezależnie jaki będzie bałagan nie narzekamy, tylko cieszymy się że wspólnie spędzonego czasu 😁
+Tylko jest jedno ALE niezależnie jaki będzie bałagan nie narzekamy, tylko cieszymy się ze wspólnie spędzonego czasu 😁
 
 ### [Oto przepis, który powinien zapewnić wam piernikowy sukces.](https://mojewypieki.com/przepis/pierniczki-przepis-i){:target='_blank'}
+
+Miłego pieczenia!
