--- a/_posts/2022-12-10-221210.md
+++ b/_posts/2022-12-10-221210.md
@@ -2,7 +2,13 @@
 
 Dziś chcielibyśmy zachęcić Was do wspólnego majsterkowania.
 
-Nasz wspólnotowy cieśla Sebastian ;) w [tym filmie](https://www.youtube.com/watch?v=ncXi8B8z250) pokaże Wam jak własnoręcznie zbudować Bożonarodzeniową Szopkę, którą następnie możecie pomalować, wystroić i urządzić według własnego pomysłu.
+## Szopka z materiałów z odzysku
+
+W tym roku zadanie będzie łatwiejsze: pokażemy, jak można wykonać szopkę z materiałów z odzysku. Filmik potraktujcie jako inspirację.
+
+{% include video.html id="hBs_0NzKIpM" %}
+
+A jeśli wolicie coś bardziej tradycyjnego, to przypominamy ubiegłoroczny pomysł z szopką z drewna: 
 
 {% include video.html id="ncXi8B8z250" %}
 
