--- a/_posts/2022-12-14-221214.md
+++ b/_posts/2022-12-14-221214.md
@@ -23,6 +23,6 @@ Potrzeby będą te same, ale ich realizacja może wyglądać zupełnie inaczej!
 
 Zastanów się, czego Ci dziś trzeba i postaraj się to zrobić. Sposobów realizacji każdej z potrzeb może być wiele. Jakie sposoby realizacji możesz wykorzystać już dziś?
 
-Życzę, abyś na koniec dnia było u ciebie poczucie, że udało się Tobie zaoopiekować jakąś częścią siebie.
+Życzę, aby na koniec dnia było u Ciebie poczucie, że udało się Tobie zaopiekować jakąś częścią siebie.
 
 Porozmawiaj z innymi domownikami o ich potrzebach i sposobach zaopiekowania się nimi!
