--- a/_posts/2022-12-18-221218.md
+++ b/_posts/2022-12-18-221218.md
@@ -16,13 +16,9 @@ Przygotujcie kawę i herbatę i spotkajcie się w sypialni rodziców wraz z dzie
 
 ## …w łóżku?
 
-Zróbcie wspólne pogaduchy. O najfajniejszych wspomnieniach z poprzednich świąt. O reszcie rodziny, której w tym roku ze względu na pandemię nie będziemy mogli gościć na wigilii. O tym jak nam mija ten Adwent. O planach i marzeniach na kolejny, miejmy nadzieję mniej zawirusowany, rok!
+Zróbcie wspólne pogaduchy. O najfajniejszych wspomnieniach z poprzednich świąt. Z tego całego roku. O tym jak nam mija ten Adwent. O planach i marzeniach na kolejny rok!
 
 Miłej, spokojnej i bardzo leniwej niedzieli!
-
-## Co na jutro?
-
-Po takim leniuchowaniu, jutro będzie czas na kolejną aktywność manualną. Będą potrzebne: kartonik po butach, klej, kredki/flamastry/farby, nożyczki i bibuła.
 
 ## Ostatnia niedziela adwentu!
 
