--- a/_posts/2022-12-19-221219.md
+++ b/_posts/2022-12-19-221219.md
@@ -2,7 +2,7 @@
 
 Jednym z najważniejszych symboli adwentowych jest Gwiazda Betlejemska. To ona przecież wskazywała drogę do Betlejem.
 
-Dlatego dziś zachęcamy Was do wykonanie jej własnoręcznie, by i w Waszym domu pojawił się znak, że jesteśmy coraz bliżej celu.
+Dlatego dziś zachęcamy Was do wykonania jej własnoręcznie, by i w Waszym domu pojawił się znak, że jesteśmy coraz bliżej celu.
 
 Możecie zrobić kilka mniejszych i ozdobić nimi choinkę lub powiesić w różnych miejscach, ale możecie też zdecydować się na Dużą Gwiazdę, która zawiśnie na czubku Waszej choinki lub innym widocznym miejscu.
  
