--- a/_posts/2022-12-10-221210.md
+++ b/_posts/2022-12-10-221210.md
@@ -28,6 +28,6 @@ Materiały konstrukcyjne użyte w filmie:
 
 - 4 wkręty 1,5 mm i 8 wkrętów 3 mm
 - sklejka (np. 12 mm) - 2 sztuki o wymiarach 30 x 17 cm i jedna o wymiarach 30 x 45 cm
-- kantówka 40 x 10 mm (140 cm do pocięcia na 5 kawałki)
+- kantówka 40 x 10 mm (140 cm do pocięcia na 5 kawałków)
 
 
