--- a/_posts/2022-12-12-221212.md
+++ b/_posts/2022-12-12-221212.md
@@ -4,35 +4,37 @@ Znacie historię tego człowieka, który całe życie spędził “w cieniu” s
 
 ![Zdjęcie](/img/2021-12-13.jpg)
 
+## Opowiedzcie dzieciom historię Jana Chrzciciela
+
 Elżbieta pochodziła z rodu Aarona, a jej mąż Zachariasz był kapłanem. Oboje byli już w podeszłym wieku i modlili się o potomstwo, bo dla Boga nie ma nic niemożliwego. 
 
 Archanioł Gabriel ukazał się Zachariaszowi i powiedział:
 
-> “Żona twoja, Elżbieta, porodzi ci syna i dasz mu imię Jan i stanie się on dla ciebie radością i weselem, bo będzie wielkim przed Panem. Wina i innych podobnych napojów pić nie będzie. Duch Święty go napełni, a wielu synów izraelskich nawróci do Boga."
+> “Żona twoja, Elżbieta, porodzi ci syna i dasz mu imię Jan i stanie się on dla ciebie radością i weselem, bo będzie wielkim przed Panem. Wina i innych podobnych napojów pić nie będzie. Duch Święty go napełni, a wielu synów izraelskich nawróci do Boga." (Łk 1, 13-16)
 
 Zachariasz niedowierzał Aniołowi, wskutek czego przestał mówić.
 
 Kiedy Elżbieta była w szóstym miesiącu ciąży, odwiedziła ją Maryja. Elżbieta pierwsza rozpoznała swoją kuzynkę jako przyszłą matkę Jezusa, Zbawiciela. Na jej widok powiedziała:
 
-> “Błogosławiona jesteś między niewiastami i błogosławiony jest owoc Twojego łona. A skądże mi to, że Matka mojego Pana przychodzi do mnie? 
+> “Błogosławiona jesteś między niewiastami i błogosławiony jest owoc Twojego łona. A skądże mi to, że Matka mojego Pana przychodzi do mnie? (Łk 1, 42-43)
 
 Maryja pozostała u Elżbiety, pomagając jej aż do czasu rozwiązania. Dokładnie pół roku przed Jezusem na świat przyszedł Jan.
 
 Niedługo później Herod wydał rozkaz zamordowania wszystkich chłopców w Betlejem do lat dwóch. Elżbieta ukryła się z synem w górach. Zachariasz został zamordowany przez żołnierzy Heroda, nie chciał wyjawić miejsca pobytu rodziny. Elżbieta zmarła niedługo po mężu. 
 
-Jan został sierotą, uciekł na pustynię, wyrzekł się stanu kapłańskiego po swoim ojcu i żył w ubóstwie. “Żywił miodem i szarańczą”. Był pustelnikiem, zgłębiał modlitwę. 
+Jan został sierotą, uciekł na pustynię, wyrzekł się stanu kapłańskiego po swoim ojcu i żył w ubóstwie. “Żywił się miodem i szarańczą”. Był pustelnikiem, zgłębiał modlitwę. 
 
 Po ukończeniu 30 lat zaczął nauczać o przyjściu Jezusa, głosił Ewangelię i udzielał chrztu nawrócenia. Niektórzy jego uczniowie zostali apostołami Jezusa. Jan chrzcił w wodach Jordanu, przychodzili do niego mieszkańcy Jerozolimy, Judei i okolic. Był bardzo znanym prorokiem, który wskazywał na Jezusa, żył w jego czasach i dawał o nim świadectwo.
 
 Jan Chrzciciel doskonale rozumiał swoje posłannictwo:
 
-> ”Ja was chrzczę wodą dla nawrócenia; lecz Ten, który idzie za mną, mocniejszy jest ode mnie; ja nie jestem godzien nosić Mu sandałów. On was chrzcić będzie Duchem Świętym i ogniem” (Mt 3,11)
+> ”Ja was chrzczę wodą dla nawrócenia; lecz Ten, który idzie za mną, mocniejszy jest ode mnie; ja nie jestem godzien nosić Mu sandałów. On was chrzcić będzie Duchem Świętym i ogniem” (Mt 3, 11)
 
 Jan przedstawiał Jezusa jako Baranka Bożego, który gładzi grzechy świata, czyli całe zło oddzielające nas od Boga. 
 
 Pewnego dnia przyszedł do Jana Jezus i poprosił o chrzest! Kiedy Jezus wyszedł z Jordanu po chrzcie, głos z Nieba rozległ się i oznajmił:
 
-> “On jest moim Synem umiłowanym, którego sobie upodobałem”.
+> “On jest moim Synem umiłowanym, którego sobie upodobałem”. (Mt 3, 17)
 
 Po chrzcie Jezus udał się na pustynię, gdzie był poddany kuszeniu przez diabła.
 
