--- a/_posts/2022-12-17-221217.md
+++ b/_posts/2022-12-17-221217.md
@@ -6,11 +6,11 @@ Przyprawy korzenne, miód, zagniatanie, dekorowanie, a to wszystko wykonywane ws
 
 ![Pierniki](/img/2022-12-17.jpg)
 
-## Zróbmy Pierniczki dla całej rodziny (i nie tylko!)
+## Zróbmy pierniczki dla całej rodziny (i nie tylko!)
 
-Robienie pierniczków świątecznych potrafi działać magię wprowadzając nas w tą niepowtarzalna atmosferę rodzinnej bliskości. Zadanie to jest bardziej czasochłonne, ale warto je podjąć, bo daje ogromną satysfakcję.
+Robienie pierniczków świątecznych potrafi działać magię wprowadzając nas w tą niepowtarzalną atmosferę rodzinnej bliskości. Zadanie to jest bardziej czasochłonne, ale warto je podjąć, bo daje ogromną satysfakcję.
 
-Tylko jest jedno ALE niezależnie jaki będzie bałagan nie narzekamy, tylko cieszymy się ze wspólnie spędzonego czasu 😁
+Tylko jest jedno "ALE": niezależnie jaki będzie bałagan nie narzekamy, tylko cieszymy się ze wspólnie spędzonego czasu 😁
 
 ### [Oto przepis, który powinien zapewnić wam piernikowy sukces.](https://mojewypieki.com/przepis/pierniczki-przepis-i){:target='_blank'}
 
