--- a/_posts/2022-12-24-221224.md
+++ b/_posts/2022-12-24-221224.md
@@ -4,7 +4,9 @@ Dziś w nocy, w Wigilię Bożego Narodzenia, będziemy obchodzić pamiątkę nar
 
 Tym samym kończy się Adwent, podczas którego przygotowaliśmy się na Jego przyjście, podobnie jak rodzice przygotowują się na narodziny swojego dziecka.
 
-Przypomnijmy zatem naszym dzieciom ten czas i opowiedzmy rodzinną historię. Dzieci uwielbiają słuchać historii o tym jak były kiedyś w brzuchu, jak się urodziły i jak miały niewiele więcej niż 50 cm długości. Wspólne wspominanie okresu ciąży i pierwszych chwil dziecka pomaga uświadomić sobie jak cennym darem jest życie, a także spojrzeć na nasze dzieci, które być może nie przypominają już tych małych bobasków z pierwszych dni swojego życia, z tą samą miłością i nadzieją, jak przed laty.
+Przypomnijmy zatem naszym dzieciom ten czas i opowiedzmy rodzinną historię.
+
+Dzieci uwielbiają słuchać historii o tym, jak były kiedyś w brzuchu, jak się urodziły i jak miały niewiele więcej niż 50 cm długości. Wspólne wspominanie okresu ciąży i pierwszych chwil dziecka pomaga uświadomić sobie, jak cennym darem jest życie, a także spojrzeć na nasze dzieci, które być może nie przypominają już tych małych bobasków z pierwszych dni swojego życia, z tą samą miłością i nadzieją, jak przed laty.
 
 Podziękujmy dziś wspólnie Bogu za cud narodzin, którego my wszyscy byliśmy kiedyś udziałem.
 
